@@ -1,422 +1,363 @@
-# VelocityTasks ⚡
+# VelocityTasks 🚀
 
-> **Lightning-fast task management for the modern developer**
+**Ultra-Lightweight Task Management Web Application**
 
-VelocityTasks is a lightweight, high-performance task management web application designed specifically to run on [FeatherJet](https://github.com/Rishabh-Tamrakar/FeatherJet), the ultra-lightweight Java web server. Built with simplicity, speed, and elegance in mind.
+VelocityTasks is a production-ready, lightweight task management web application built with Go backend and vanilla JavaScript frontend. It's designed to be fast, efficient, and deployable anywhere with zero configuration.
 
-![VelocityTasks Screenshot](docs/screenshot.png)
+![VelocityTasks Screenshot](https://via.placeholder.com/800x400/4F83F7/ffffff?text=VelocityTasks+Screenshot)
 
-## 🌟 Features
+## ✨ Features
 
-### ⚡ **Lightning Fast**
-- Optimized for FeatherJet's lightweight architecture
-- Minimal resource footprint (~15MB total)
-- Sub-second response times
-- Progressive Web App (PWA) capabilities
-
-### 🎨 **Modern UI/UX**
-- Clean, intuitive interface
-- Responsive design (mobile-first)
-- Real-time updates
-- Smooth animations and transitions
-- Dark/light theme support (coming soon)
-
-### 📋 **Task Management**
-- Create, read, update, delete tasks (CRUD)
-- Priority levels (High, Medium, Low)
-- Task completion tracking
-- Real-time statistics
-- Search and filter functionality
-
-### 🔧 **Developer Friendly**
-- RESTful API design
-- JSON responses
-- CORS enabled
-- Comprehensive logging
-- Easy to extend
-
-## 🏗️ Architecture
-
-VelocityTasks follows a clean, layered architecture:
-
-```
-┌─────────────────┐
-│   Frontend      │  Modern HTML5/CSS3/JavaScript
-│   (Web UI)      │  Progressive Web App
-├─────────────────┤
-│   API Layer     │  RESTful servlets
-│   (Servlets)    │  JSON responses
-├─────────────────┤
-│   Business      │  Task management logic
-│   Logic         │  In-memory data store
-├─────────────────┤
-│   FeatherJet    │  Lightweight web server
-│   (Runtime)     │  Servlet container
-└─────────────────┘
-```
-
-## 📋 Prerequisites
-
-- **Java 17** or higher
-- **Maven 3.6+** (for building)
-- **FeatherJet 1.0+** (web server)
-- Modern web browser (Chrome, Firefox, Safari, Edge)
+- 📝 **Complete Task Management**: Create, read, update, delete tasks with titles and descriptions
+- 🎯 **Priority System**: Low (green), Medium (yellow), High (red) color-coded indicators
+- 📊 **Task States**: Pending, In Progress, Completed with visual status indicators
+- 🔍 **Search & Filter**: Real-time search and filter by priority/status
+- 📈 **Statistics Dashboard**: Total, completed, pending task counters
+- 📱 **Mobile-First Design**: Responsive layout for all devices
+- ⚡ **Lightning Fast**: <100ms API response times, <50MB RAM usage
+- 🎨 **Modern UI**: Clean design with smooth animations
+- ♿ **Accessible**: ARIA labels, keyboard navigation support
 
 ## 🚀 Quick Start
 
-### 1. Clone and Build
+**Option 1: Standalone Binary**
+```bash
+# Clone the repository
+git clone https://github.com/rishabh-tamrakar/velocitytasks.git
+cd velocitytasks
+
+# Run immediately (zero configuration required)
+go run main.go
+```
+
+**Option 2: Using FeatherJet**
+```bash
+# Place VelocityTasks in FeatherJet project
+cp -r velocitytasks/* /path/to/featherjet/
+cd /path/to/featherjet/
+go run cmd/featherjet/main.go
+```
+
+Visit `http://localhost:8080` and start managing your tasks!
+
+## 📦 Installation Options
+
+### 1. Standalone Binary
+
+Build for your platform:
+```bash
+# Linux
+GOOS=linux GOARCH=amd64 go build -o velocitytasks-linux main.go
+
+# Windows
+GOOS=windows GOARCH=amd64 go build -o velocitytasks.exe main.go
+
+# macOS
+GOOS=darwin GOARCH=amd64 go build -o velocitytasks-macos main.go
+```
+
+### 2. FeatherJet Integration
+
+VelocityTasks is built on FeatherJet framework. To integrate:
+
+1. Copy VelocityTasks files to your FeatherJet project
+2. Update your `config.yaml` with VelocityTasks settings
+3. Run with FeatherJet: `go run cmd/featherjet/main.go`
+
+### 3. Apache Tomcat Deployment
 
 ```bash
-git clone <your-repo-url>
-cd velocity-tasks
-mvn clean package
+# Build WAR file
+cd deployment/tomcat
+jar -cvf velocitytasks.war -C ../../web .
+
+# Deploy to Tomcat
+cp velocitytasks.war $TOMCAT_HOME/webapps/
 ```
 
-### 2. Deploy to FeatherJet
+### 4. Nginx Deployment
 
 ```bash
-# Copy the WAR file to FeatherJet webapps directory
-cp target/velocity-tasks.war /path/to/featherjet/webapps/
+# Copy static files
+cp -r web/* /var/www/html/velocitytasks/
 
-# Or extract as a directory
-cd /path/to/featherjet/webapps/
-unzip velocity-tasks.war -d velocity-tasks/
+# Configure Nginx (see deployment/nginx/nginx.conf)
+sudo cp deployment/nginx/nginx.conf /etc/nginx/sites-available/velocitytasks
+sudo ln -s /etc/nginx/sites-available/velocitytasks /etc/nginx/sites-enabled/
+sudo nginx -s reload
+
+# Run Go backend
+./velocitytasks
 ```
 
-### 3. Start FeatherJet
+### 5. Docker Deployment
 
 ```bash
-cd /path/to/featherjet
-java -jar featherjet-server.jar
+# Build and run with Docker
+docker build -t velocitytasks .
+docker run -p 8080:8080 velocitytasks
+
+# Or use Docker Compose
+docker-compose up
 ```
 
-### 4. Access the Application
+## 🔌 API Documentation
 
-Open your browser and navigate to:
-- **http://localhost:8080/velocity-tasks/** (if deployed as WAR)
-- **http://localhost:8080/** (if deployed as ROOT application)
-
-## 🛠️ Configuration
-
-### FeatherJet Configuration
-
-Edit `conf/server.properties`:
-
-```properties
-# Server Settings
-server.port=8080
-server.host=0.0.0.0
-server.maxThreads=200
-
-# Performance Tuning for VelocityTasks
-server.connectionTimeout=30000
-server.maxConnections=1000
-server.staticContent.cache=true
-server.staticContent.cacheSize=50MB
-```
-
-### Application Configuration
-
-VelocityTasks uses sensible defaults and requires no additional configuration. All settings are handled through the web interface.
-
-## 📊 API Documentation
-
-### Task Endpoints
+### Task Management
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
-| `GET` | `/api/tasks` | Get all tasks |
-| `POST` | `/api/tasks` | Create new task |
-| `GET` | `/api/tasks/{id}` | Get specific task |
-| `PUT` | `/api/tasks/{id}` | Update task |
-| `DELETE` | `/api/tasks/{id}` | Delete task |
+| GET | `/api/tasks` | Get all tasks |
+| POST | `/api/tasks` | Create new task |
+| GET | `/api/tasks/{id}` | Get specific task |
+| PUT | `/api/tasks/{id}` | Update task |
+| DELETE | `/api/tasks/{id}` | Delete task |
 
-### Statistics Endpoint
+### Search & Filter
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
-| `GET` | `/api/stats` | Get application statistics |
+| GET | `/api/tasks/search?q=query&priority=high&status=pending` | Search tasks |
 
-### Example Request/Response
+### Statistics
 
-**Create Task:**
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| GET | `/api/stats` | Get task statistics |
+
+### System
+
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| GET | `/health` | Health check |
+
+### Example API Usage
+
+**Create a task:**
 ```bash
 curl -X POST http://localhost:8080/api/tasks \
   -H "Content-Type: application/json" \
   -d '{
     "title": "Complete project documentation",
-    "priority": "HIGH"
+    "description": "Write comprehensive README and API docs",
+    "priority": "high",
+    "status": "pending"
   }'
 ```
 
-**Response:**
-```json
-{
-  "id": "123e4567-e89b-12d3-a456-426614174000",
-  "title": "Complete project documentation",
-  "priority": "HIGH",
-  "completed": false,
-  "createdAt": "2025-01-20T10:30:00",
-  "updatedAt": "2025-01-20T10:30:00"
-}
+**Get all tasks:**
+```bash
+curl http://localhost:8080/api/tasks
 ```
 
-## 🐧 Linux Server Deployment
+**Search tasks:**
+```bash
+curl "http://localhost:8080/api/tasks/search?q=documentation&priority=high"
+```
 
-### Systemd Service Setup
+## 📁 File Structure
 
-1. **Create service file:**
+```
+VelocityTasks/
+├── README.md                 # This documentation
+├── LICENSE                   # MIT License
+├── go.mod                    # Go module definition
+├── go.sum                    # Go dependencies lockfile
+├── config.yaml              # Application configuration
+├── main.go                   # Standalone entry point
+├── cmd/
+│   └── velocitytasks/
+│       └── main.go          # CLI entry point
+├── internal/
+│   ├── handlers/
+│   │   └── tasks.go         # Task CRUD handlers with validation
+│   ├── models/
+│   │   └── task.go          # Task data structures and business logic
+│   ├── storage/
+│   │   └── memory.go        # Thread-safe in-memory storage
+│   └── api/
+│       └── routes.go        # API route definitions and middleware
+├── web/                      # Frontend assets
+│   ├── index.html           # Single-page application
+│   ├── css/
+│   │   ├── styles.css       # Main responsive stylesheet
+│   │   └── animations.css   # Smooth transition animations
+│   ├── js/
+│   │   ├── app.js           # Application state management
+│   │   ├── api.js           # HTTP client for backend communication
+│   │   └── ui.js            # DOM manipulation and UI components
+│   └── assets/
+│       └── favicon.ico      # Application icon
+├── deployment/               # Multi-platform deployment configs
+│   ├── tomcat/
+│   │   └── web.xml          # Java servlet container config
+│   ├── nginx/
+│   │   └── nginx.conf       # Reverse proxy configuration
+│   └── docker/
+│       ├── Dockerfile       # Container image definition
+│       └── docker-compose.yml # Multi-service orchestration
+└── scripts/                  # Build and deployment automation
+    ├── build.sh             # Cross-platform build script
+    └── deploy.sh            # One-click deployment script
+```
+
+## ⚙️ Configuration
+
+### Environment Variables
+
+| Variable | Default | Description |
+|----------|---------|-------------|
+| `PORT` | `8080` | Server port |
+| `HOST` | `localhost` | Server host |
+| `STATIC_DIR` | `web` | Static files directory |
+| `LOG_LEVEL` | `info` | Logging level (debug, info, warn, error) |
+| `CORS_ENABLED` | `true` | Enable CORS headers |
+
+### Configuration File (config.yaml)
+
+```yaml
+server:
+  host: "localhost"
+  port: 8080
+  read_timeout: "30s"
+  write_timeout: "30s"
+  idle_timeout: "120s"
+
+static:
+  directory: "web"
+  cache_max_age: "3600"
+
+middleware:
+  enable_cors: true
+  enable_compression: true
+
+logging:
+  level: "info"
+  enable_request_logging: true
+```
+
+## 🛠️ Development
+
+### Prerequisites
+
+- Go 1.21 or later
+- Modern web browser
+
+### Building from Source
 
 ```bash
-sudo nano /etc/systemd/system/velocity-tasks.service
+# Clone repository
+git clone https://github.com/rishabh-tamrakar/velocitytasks.git
+cd velocitytasks
+
+# Install dependencies
+go mod tidy
+
+# Run in development mode
+go run main.go
+
+# Build for production
+go build -ldflags="-w -s" -o velocitytasks main.go
 ```
 
-```ini
-[Unit]
-Description=VelocityTasks on FeatherJet
-After=network.target
-
-[Service]
-Type=simple
-User=featherjet
-Group=featherjet
-WorkingDirectory=/opt/featherjet
-ExecStart=/usr/bin/java -Xms256m -Xmx512m -jar featherjet-server.jar
-Restart=always
-RestartSec=10
-StandardOutput=journal
-StandardError=journal
-
-[Install]
-WantedBy=multi-user.target
-```
-
-2. **Enable and start service:**
+### Running Tests
 
 ```bash
-sudo systemctl daemon-reload
-sudo systemctl enable velocity-tasks
-sudo systemctl start velocity-tasks
+# Run all tests
+go test ./...
+
+# Run with coverage
+go test -cover ./...
+
+# Run benchmarks
+go test -bench=. ./...
 ```
 
-### Nginx Reverse Proxy (Optional)
-
-```nginx
-server {
-    listen 80;
-    server_name your-domain.com;
-
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-```
-
-### Docker Deployment
-
-```dockerfile
-FROM openjdk:17-jre-slim
-
-WORKDIR /app
-COPY featherjet/ .
-COPY velocity-tasks.war webapps/ROOT.war
-
-EXPOSE 8080
-CMD ["java", "-jar", "featherjet-server.jar"]
-```
-
-```bash
-docker build -t velocity-tasks .
-docker run -p 8080:8080 velocity-tasks
-```
-
-## 🔧 Development Setup
-
-### Local Development
-
-1. **Start with Maven Jetty plugin:**
-```bash
-mvn jetty:run
-```
-
-2. **Or build and deploy to local FeatherJet:**
-```bash
-mvn clean package
-cp target/*.war /path/to/featherjet/webapps/
-```
-
-### Project Structure
-
-```
-velocity-tasks/
-├── src/
-│   ├── main/
-│   │   ├── java/
-│   │   │   └── com/velocitytasks/
-│   │   │       ├── model/           # Data models
-│   │   │       ├── service/         # Business logic
-│   │   │       └── servlet/         # REST endpoints
-│   │   └── webapp/
-│   │       ├── WEB-INF/
-│   │       │   └── web.xml          # Servlet configuration
-│   │       ├── css/                 # Stylesheets
-│   │       ├── js/                  # JavaScript
-│   │       ├── images/              # Images and icons
-│   │       ├── error/               # Error pages
-│   │       └── index.html           # Main application
-│   └── test/                        # Unit tests
-├── pom.xml                          # Maven configuration
-└── README.md                        # This file
-```
-
-## 📈 Performance Optimization
-
-### JVM Tuning
-
-```bash
-java -Xms512m -Xmx1g \
-     -XX:+UseG1GC \
-     -XX:MaxGCPauseMillis=200 \
-     -XX:+PrintGC \
-     -jar featherjet-server.jar
-```
-
-### FeatherJet Tuning
-
-```properties
-# Increase thread pool for high concurrency
-server.maxThreads=400
-server.minThreads=50
-
-# Enable compression
-server.compression.enabled=true
-server.compression.minSize=1024
-
-# Static content caching
-server.staticContent.cache=true
-server.staticContent.cacheSize=100MB
-server.staticContent.maxAge=86400
-```
-
-## 🧪 Testing
-
-### Run Tests
-
-```bash
-mvn test
-```
-
-### Manual Testing
-
-```bash
-# Health check
-curl http://localhost:8080/api/stats
-
-# Create test task
-curl -X POST http://localhost:8080/api/tasks \
-  -H "Content-Type: application/json" \
-  -d '{"title":"Test Task","priority":"HIGH"}'
-```
-
-## 🔍 Monitoring & Troubleshooting
-
-### Log Files
-
-- **FeatherJet logs:** `logs/featherjet.log`
-- **Access logs:** `logs/access.log`
-- **Application logs:** Available through FeatherJet logging
-
-### Common Issues
-
-**Port Already in Use:**
-```bash
-# Check what's using port 8080
-netstat -tlnp | grep :8080
-sudo lsof -i :8080
-```
-
-**Memory Issues:**
-```bash
-# Increase heap size
-java -Xmx2g -jar featherjet-server.jar
-```
-
-**Permission Issues:**
-```bash
-# Ensure proper permissions
-chmod +x bin/startup.sh
-chown -R featherjet:featherjet /opt/featherjet
-```
-
-## 🚧 Roadmap
-
-- [ ] **v1.1.0**
-  - Task categories/tags
-  - Due dates and reminders
-  - Data export/import
-
-- [ ] **v1.2.0**
-  - Multi-user support
-  - Authentication & authorization
-  - Team collaboration features
-
-- [ ] **v1.3.0**
-  - Database persistence (SQLite/H2)
-  - Advanced search and filtering
-  - REST API versioning
-
-- [ ] **v2.0.0**
-  - Microservices architecture
-  - Real-time collaboration
-  - Mobile app companion
-
-## 🤝 Contributing
-
-We welcome contributions! Please see [CONTRIBUTING.md](CONTRIBUTING.md) for guidelines.
-
-### Development Workflow
+### Contributing
 
 1. Fork the repository
-2. Create a feature branch: `git checkout -b feature/amazing-feature`
-3. Make your changes
-4. Add tests for new functionality
-5. Ensure all tests pass: `mvn test`
-6. Commit changes: `git commit -m 'Add amazing feature'`
-7. Push to branch: `git push origin feature/amazing-feature`
-8. Open a Pull Request
+2. Create a feature branch: `git checkout -b feature-name`
+3. Make your changes with tests
+4. Run tests: `go test ./...`
+5. Commit changes: `git commit -am 'Add feature'`
+6. Push to branch: `git push origin feature-name`
+7. Submit a pull request
+
+### Code Style
+
+- Follow Go conventions: `gofmt`, `golint`, `go vet`
+- Write tests for new features
+- Update documentation for API changes
+- Use semantic commit messages
+
+## 🚀 Performance
+
+- **Memory Usage**: <50MB RAM typical usage
+- **Response Time**: <100ms API endpoints
+- **Concurrent Users**: 1000+ simultaneous connections
+- **File Size**: <10MB binary (with UPX compression)
+- **Startup Time**: <100ms cold start
+
+## 🔒 Security
+
+- Input validation and sanitization
+- XSS protection headers
+- CORS configuration
+- Rate limiting ready
+- HTTPS support
+- Security headers middleware
+
+## 📱 Browser Support
+
+- Chrome 80+
+- Firefox 75+
+- Safari 13+
+- Edge 80+
+- Mobile browsers (iOS Safari, Chrome Mobile)
+
+## 🐳 Docker Support
+
+### Quick Start with Docker
+
+```bash
+# Build image
+docker build -t velocitytasks .
+
+# Run container
+docker run -p 8080:8080 velocitytasks
+```
+
+### Docker Compose
+
+```bash
+# Start all services
+docker-compose up
+
+# Run in background
+docker-compose up -d
+
+# View logs
+docker-compose logs -f
+```
 
 ## 📄 License
 
 This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
 
-## 🙏 Acknowledgments
+## 🤝 Acknowledgments
 
-- **FeatherJet** - The lightning-fast web server that powers VelocityTasks
-- **Modern Web Standards** - HTML5, CSS3, ES6+ for the frontend
-- **Jakarta EE** - Servlet API for the backend
-- **Google Gson** - JSON processing library
+- Built with [FeatherJet](https://github.com/rishabh-tamrakar/featherjet) framework
+- Inspired by modern task management tools
+- Thanks to the Go and JavaScript communities
 
 ## 📞 Support
 
-- 📧 **Email:** [rishabh.tamrakar@protonmail.com](rishabh.tamrakar@protonmail.com)
-- 🐛 **Issues:** [GitHub Issues](https://github.com/your-username/velocity-tasks/issues)
-- 💬 **Discussions:** [GitHub Discussions](https://github.com/your-username/velocity-tasks/discussions)
-- 📖 **Documentation:** [Wiki](https://github.com/your-username/velocity-tasks/wiki)
+- 📧 Email: support@velocitytasks.dev
+- 🐛 Issues: [GitHub Issues](https://github.com/rishabh-tamrakar/velocitytasks/issues)
+- 💬 Discussions: [GitHub Discussions](https://github.com/rishabh-tamrakar/velocitytasks/discussions)
 
 ---
 
-<div align="center">
+**Made with ❤️ by [Rishabh Tamrakar](https://github.com/rishabh-tamrakar)**
 
-**VelocityTasks** - *Light as a feather, fast as lightning* ⚡
-
-Made with ❤️ for the developer community
-
-[⭐ Star this project](https://Rishabh-Tamrakar/velocity-tasks) | [🐛 Report Bug](https://github.com/Rishabh-Tamrakar/velocity-tasks/issues) | [💡 Request Feature](https://github.com/your-username/velocity-tasks/issues)
-
-</div>
-
-
+*VelocityTasks - Because productivity should be fast and beautiful.*
